--- a/P007097.opf/meta.yml
+++ b/P007097.opf/meta.yml
@@ -3,5 +3,17 @@ initial_creation_type: ocr
 source_metadata:
   id: bdr:W4777
   title: སུམ་རྟགས་འགྲེལ་ཆེན
-  volume: ''
+  volume:
+    ba54e08afd9e44e1816323bb7084f496:
+      image_group_id: I1PD338
+      title: Volume 1 of sum rtags 'grel chen
+      volume_number: 1
+      total_pages: 310
   author: ''
+ebook_metadata:
+  title: སུམ་རྟགས་འགྲེལ་ཆེན
+  author: ''
+  sku: P007097
+  cover: cover.jpg
+  layers:
+  - pagination
