--- a/P007097.opf/meta.yml
+++ b/P007097.opf/meta.yml
@@ -1,15 +1,16 @@
-id: opecha:P007097
+id: P007097
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W4777
   title: སུམ་རྟགས་འགྲེལ་ཆེན
-  volume:
+  author: ''
+  volumes:
     ba54e08afd9e44e1816323bb7084f496:
       image_group_id: I1PD338
       title: Volume 1 of sum rtags 'grel chen
       volume_number: 1
       total_pages: 310
-  author: ''
+      base_file: v001.txt
 ebook_metadata:
   title: སུམ་རྟགས་འགྲེལ་ཆེན
   author: ''
