volumes of meta updated

--- a/P007097.opf/meta.yml
+++ b/P007097.opf/meta.yml
@@ -5,12 +5,11 @@ source_metadata:
   title: སུམ་རྟགས་འགྲེལ་ཆེན
   author: ''
   volumes:
-    ba54e08afd9e44e1816323bb7084f496:
+    b728d5c18cab4bef808a3e686809fb7b:
       image_group_id: I1PD338
-      title: Volume 1 of sum rtags 'grel chen
+      title: ''
       volume_number: 1
       total_pages: 310
-      base_file: v001.txt
 ebook_metadata:
   title: སུམ་རྟགས་འགྲེལ་ཆེན
   author: ''
