--- a/P007097.opf/layers/v001/Pagination.yml
+++ b/P007097.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 29153b17027346208e2299e64a94f615
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   a1f93f863d8e46e1a74330d5a1efde57:
